--- a/src/main/resources/templates/member/index.html
+++ b/src/main/resources/templates/member/index.html
@@ -6,15 +6,18 @@
     <!--<link rel="stylesheet" href="../../static/css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}"/>-->
     <!--<link rel="stylesheet" href="../../static/css/bootstrap-theme.min.css" th:href="@{/css/bootstrap-theme.min.css}"/>-->
 
-    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-          crossorigin="anonymous">
+    <!--&lt;!&ndash; 最新版本的 Bootstrap 核心 CSS 文件 &ndash;&gt;-->
+    <!--<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"-->
+          <!--integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"-->
+          <!--crossorigin="anonymous">-->
 
-    <!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-          crossorigin="anonymous">
+    <!--&lt;!&ndash; 可选的 Bootstrap 主题文件（一般不用引入） &ndash;&gt;-->
+    <!--<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"-->
+          <!--integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"-->
+          <!--crossorigin="anonymous">-->
+
+    <link rel="stylesheet" href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" href="../../static/css/bootstrap-theme.min.css" th:href="@{/css/bootstrap-theme.min.css}"/>
 
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"
@@ -37,7 +40,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html" th:href="@{member/index}">Tickets</a>
+            <a class="navbar-brand" href="index.html" th:href="@{index}">Tickets</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -77,7 +80,7 @@
             <h4 class="panel-title">
                 <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
                    aria-expanded="true" aria-controls="collapseOne">
-                    Recent Tickets Records
+                    有效票据
                 </a>
             </h4>
         </div>
@@ -140,17 +143,99 @@
                                     去支付
                                 </a>
                             </td>
-
-
                         </tr>
                     </table>
-
-
 
                 </div>
             </div>
         </div>
     </div>
+
+
+    <div class="panel panel-info">
+        <div class="panel-heading" role="tab" id="headingTwo">
+            <h4 class="panel-title">
+                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"
+                   aria-expanded="true" aria-controls="collapseTwo">
+                    消费记录
+                </a>
+            </h4>
+        </div>
+        <div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
+            <div class="panel-body">
+                <div class="table-responsive ">
+                    <table class="table table-hover">
+                        <tr>
+                            <th>No</th>
+                            <th>Time</th>
+                            <th>Type</th>
+                            <th>Amount</th>
+                            <th>Deposit</th>
+                        </tr>
+                        <tr th:each="consume : ${statistics.consumptionVOS}"
+                            th:class="(${consume.type == 0}) ? 'success' : ((${consume.type == 1}) ? 'info' : 'danger')">
+                            <td th:text="${#numbers.formatInteger(consume.id,7)}">1</td>
+                            <td th:text="${#dates.format(new java.util.Date(consume.time),'dd/MM/yyyy hh:mm:ss')}">
+                                2016-3-18 22:25:25
+                            </td>
+                            <td th:text="(${consume.type == 0}) ? 'Recharge' : ((${consume.type == 1}) ? 'Point Convert' : 'Consumption')">
+                                Consumption
+                            </td>
+                            <td th:text="${consume.amount}">-500</td>
+                            <td th:text="${consume.after}">800</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="panel panel-info">
+        <div class="panel-heading" role="tab" id="headingThree">
+            <h4 class="panel-title">
+                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree"
+                   aria-expanded="true" aria-controls="collapseThree">
+                    失效记录
+                </a>
+            </h4>
+        </div>
+        <div id="collapseThree" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingThree">
+            <div class="panel-body">
+                <div class="table-responsive ">
+                    <table class="table table-hover">
+                        <tr>
+                            <th>No</th>
+                            <th>In Time</th>
+                            <th>Out Time</th>
+                            <th>Hotel</th>
+                            <th>Room</th>
+                            <th>Num Of Person</th>
+                            <th>Pay Method</th>
+                            <th>Total($)</th>
+                        </tr>
+                        <tr th:each="liveMes : ${statistics.liveMesVOS}">
+                            <td th:text="${#numbers.formatInteger(liveMes.id,7)}">0000001</td>
+                            <td th:text="${#dates.format(new java.util.Date(liveMes.inTime),'dd/MM/yyyy hh:mm:ss')}">
+                                2016-3-18 22:25:25
+                            </td>
+                            <td th:text="(${liveMes.status == 0}) ? '----' : ${#dates.format(new java.util.Date(liveMes.outTime),'dd/MM/yyyy HH:mm:ss')}">
+                                2016-3-19 10:25:25
+                            </td>
+                            <td th:text="${liveMes.hotelName}">Shanghai Hotel</td>
+                            <td th:text="${liveMes.roomName}">Big Room1</td>
+                            <td th:text="${liveMes.personNum}">2</td>
+                            <th th:text="(${liveMes.payMethod == 0}) ? 'Member Card' : ((${liveMes.payMethod == 1}) ? 'Cash' : 'Credit Card')">
+                                Credit Card
+                            </th>
+                            <th th:text="${liveMes.total}">300</th>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
     <nav aria-label="Page navigation" class="col-md-offset-10 col-md-4">
