--- a/src/main/resources/templates/plan/unselectSeat.html
+++ b/src/main/resources/templates/plan/unselectSeat.html
@@ -113,7 +113,7 @@
               <!--th:action="@{/payment/buyTicketWithoutSeats}" >-->
 
 
-            Plan ID:<label> <input type="number" name="planID" id="planid" th:value="${planID}"/></label>
+            Plan ID:<label> <input type="number" name="planID" id="planid" th:value="${planID}" readonly="readonly"/></label>
                      <br>
             A:<label><input type="number" name="num_a" id="num_a" min="0" max="20"/></label>
                 <br>
