--- a/src/main/resources/templates/site/index.html
+++ b/src/main/resources/templates/site/index.html
@@ -51,8 +51,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="../site/index.html" th:href="@{/member/site}">Site<span
                         class="sr-only">(current)</span></a></li>
-                <li class="active"><a href="index.html" th:href="@{/member/index}">Records</a></li>
-                <li><a href="../member/statistics.html" th:href="@{/member/statistics}">Statistics</a></li>
+                <li  ><a href="index.html" th:href="@{/member/index}">Records</a></li>
                 <li><a href="../member/profile.html" th:href="@{/member/profile}">Profile</a></li>
 
             </ul>
