--- a/src/main/resources/templates/site/plans.html
+++ b/src/main/resources/templates/site/plans.html
@@ -37,9 +37,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="index.html" th:href="@{index}">All Site<span
+                <li><a href="index.html" th:href="@{index}">Back All Site<span
                         class="sr-only">(current)</span></a></li>
-                <li><a href="../site/info.html" th:href="@{info}">Site Info</a></li>
+                <!--<li><a href="../site/info.html" th:href="@{info}">Site Info</a></li>-->
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
