--- a/src/main/resources/templates/site/register.html
+++ b/src/main/resources/templates/site/register.html
@@ -22,8 +22,8 @@
         <form id="form1" method="post" role="form"> <!--action="../member/register.html" th:action="@{/user/register}"-->
 
             <div class="form-group">
-                <label for="siteID">识别码</label>
-                <input type="text" class="form-control" name="siteID" id="siteID" />
+                <label for="siteID">场馆名</label>
+                <input type="text" class="form-control" name="siteName" id="siteID" />
             </div>
             <div class="form-group">
                 <label for="password">密码</label>
@@ -61,9 +61,9 @@
                 async: false,
                 dataType: "json",
                 success: function (data) {
-                    if (data.result) {
+                    if (data) {
+                        alert(data.result_id);
                         location.href = "login" ;
-                        alert(data.message);
                     } else {
                         alert(data.message);
                     }
